# clay-backend-plugin

./: .gitignore  .mcp.json  CLAUDE.md  FINDINGS.md  LICENSE  Makefile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  schedules.example.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: synthesis.md
hosted/: Dockerfile  app.py  railway.toml  render.yaml  requirements.txt  scheduler.py
skills/analyze-patterns/: SKILL.md
skills/import-data/: SKILL.md
skills/setup-guide/: SKILL.md
src/clay_backend/: __init__.py  daemon.py  database.py  models.py  scheduler.py  server.py  webhook_server.py
src/clay_backend/embeddings/: base.py  local_provider.py  openai_provider.py
src/clay_backend/services/: embedding_service.py  record_service.py  remote_service.py  search_service.py
tests/: conftest.py  smoke_local.py  test_clay_backend.py  test_scheduler.py  test_webhook.py
tests/fixtures/: call_analysis.csv  clay_records.json  generate_fixtures.py
