[project]
name = "clay-backend-plugin"
version = "0.1.0"
description = "Claude Code plugin that stores, searches, and analyzes patterns across Clay data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Gabriel Garavit"},
]
keywords = ["clay", "mcp", "aggregation", "embeddings", "sales", "analysis"]

dependencies = [
    "mcp>=1.0",
    "sqlite-vec>=0.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
local-embeddings = ["sentence-transformers>=3.0"]

[project.scripts]
clay-mcp = "clay_backend.server:main"
clay-webhook-daemon = "clay_backend.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clay_backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
